--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "date-fns": "2.30.0",
     "draft-js": "0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "formidable": "^3.5.0",
     "i18next": "22.4.15",
     "i18next-browser-languagedetector": "7.0.1",
